--- a/src/package.json
+++ b/src/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "files",
-  "private": true,
-  "version": "0.0.0",
-  "description": "a Sails application",
-  "keywords": [],
+  "name": "duraark-geometricenrichment",
+  "private": false,
+  "version": "0.7.0",
+  "description": "Service for exposing DURAARK's geometric enrichment components via a REST-API.",
+  "keywords": [
+    "session",
+    "long term preservation",
+    "duraark",
+    "api",
+    "sailsjs"
+  ],
   "dependencies": {
+    "bluebird": "^2.9.34",
     "chai": "~1.10.0",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
@@ -20,26 +27,28 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "lodash": "~3.9.3",
     "mkdirp": "^0.5.0",
     "node-uuid": "~1.4.2",
     "rc": "~0.5.0",
     "sails": "~0.10.2",
     "sails-disk": "~0.10.7",
     "underscore": "^1.8.3",
-    "lodash": "~3.9.3"
+    "xml2js": "^0.4.9"
   },
   "scripts": {
     "start": "node app.js",
     "debug": "node debug app.js",
-    "test": "grunt test"
+    "test": "grunt test",
+    "docs": "apidoc -i ./api -o ./assets"
   },
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/hecher/files.git"
+    "url": "git://github.com/DURAARK/duraark-geometricenrichment.git"
   },
-  "author": "hecher",
-  "license": "",
+  "author": "Martin Hecher <martin.hecher@fraunhofer.at>",
+  "license": "MIT",
   "devDependencies": {
     "nodemon": "^1.2.1",
     "mocha": "^2.1.0",
@@ -48,5 +57,12 @@
     "assert": "^1.3.0",
     "sails": "~0.10.5",
     "grunt": "~0.4.2"
+  },
+  "apidoc": {
+    "name": "duraark-geometricenrichment",
+    "version": "0.7.0",
+    "title": "DURAARK GeometricEnrichment Service",
+    "url": "http://data.duraark.eu/services/api/geometricenrichment",
+    "sampleUrl": "http://data.duraark.eu/services/api/geometricenrichment"
   }
 }
