* integrated dockerized 'e57-metadata' and 'pc2ifc' components from UBO * setup for running docker-in-docker

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "e57extract"]
 	path = e57extract
 	url = https://github.com/DURAARK/e57extract
+[submodule "orthogen"]
+	path = orthogen
+	url = https://github.com/DURAARK/orthogen.git
