--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
     "chai": "~1.10.0",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
+    "image-size": "^0.3.5",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-concat": "~0.3.0",
