--- a/src/package.json
+++ b/src/package.json
@@ -28,6 +28,7 @@
     "grunt-sync": "~0.0.4",
     "image-size": "^0.3.5",
     "include-all": "~0.1.3",
+    "is-there": "^4.1.0",
     "lodash": "~3.9.3",
     "mkdirp": "^0.5.0",
     "node-uuid": "~1.4.2",
