--- a/src/package.json
+++ b/src/package.json
@@ -36,6 +36,7 @@
     "sails": "~0.10.2",
     "sails-disk": "~0.10.7",
     "underscore": "^1.8.3",
+    "xml-writer": "^1.6.0",
     "xml2js": "^0.4.9"
   },
   "scripts": {
