--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "orthogen"]
 	path = orthogen
 	url = https://github.com/DURAARK/orthogen.git
+[submodule "elecdetect"]
+	path = elecdetect
+	url = https://github.com/DURAARK/elecdetect.git
