--- a/src/package.json
+++ b/src/package.json
@@ -45,7 +45,7 @@
   "scripts": {
     "start": "node app.js",
     "debug": "node debug app.js",
-    "test": "grunt test",
+    "test": "node ./node_modules/mocha/bin/mocha tests/bootstrap.test.js tests/integration/**/*.spec.js",
     "docs": "apidoc -i ./api -o ./assets"
   },
   "main": "app.js",
@@ -56,13 +56,15 @@
   "author": "Martin Hecher <martin.hecher@fraunhofer.at>",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^1.2.1",
-    "mocha": "^2.1.0",
-    "grunt-mocha-test": "^0.12.6",
-    "sinon": "^1.12.2",
     "assert": "^1.3.0",
+    "chai": "^1.10.0",
+    "grunt": "~0.4.2",
+    "grunt-mocha-test": "^0.12.6",
+    "mocha": "^2.1.0",
+    "nodemon": "^1.2.1",
     "sails": "~0.10.5",
-    "grunt": "~0.4.2"
+    "sinon": "^1.12.2",
+    "supertest": "^1.2.0"
   },
   "apidoc": {
     "name": "duraark-geometricenrichment",
